--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@storybook/sveltekit": "^8.6.14",
 		"@storybook/test": "^8.6.14",
 		"@sveltejs/adapter-netlify": "^5.0.0",
+		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
@@ -58,6 +59,7 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
+		"vercel": "^42.1.1",
 		"vite": "^6.2.6",
 		"vitest": "^3.1.4"
 	},
