--- a/package.json
+++ b/package.json
@@ -11,25 +11,11 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^3",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@playwright/test": "^1.49.1",
-		"@storybook/addon-essentials": "^8.6.14",
-		"@storybook/addon-svelte-csf": "^5.0.0-next.0",
-		"@storybook/blocks": "^8.6.14",
-		"@storybook/experimental-addon-test": "^8.6.14",
-		"@storybook/svelte": "^8.6.14",
-		"@storybook/sveltekit": "^8.6.14",
-		"@storybook/test": "^8.6.14",
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -48,11 +34,9 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"mdsvex": "^0.12.3",
-		"playwright": "^1.52.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"storybook": "^8.6.14",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
