--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
 		"vitest": "^3.1.4"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0"
 	}
 }
